2005-01-07  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch (fix by Shlomi Fish):

	* plug-ins/script-fu/scripts/frosty-logo.scm: made sure the shadow
	is given enough space and then truncated instead of translated to
	the center of the image, thus preventing the display of shadows
	with a completely horizontal or vertical edge (fixes bug #132145).

2005-01-07  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* app/actions/plug-in-commands.c (plug_in_run_cmd_callback):
	remember the last plug-in if it has at least 3 args, not 2.

2005-01-07  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/composite/gimp-composite-x86.h
	* app/composite/gimp-composite-sse.c: applied patch from Andreas
	Jochens that fixes the build on amd64 with gcc-4.0 (bug #163041).

2005-01-06  Manish Singh  <yosh@gimp.org>

	* libgimpwidgets/gimpdialog.c: flush the display in dispose if we're
	no longer in a main loop, so the dialog doesn't hang around while
	possibly long running calculations are being done. Fixes bug #163084.

2005-01-06  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/sparkle.c: applied patch from Shlomi Fish that
	fixes more regressions in Sparkle plug-in (bug #132145).

2005-01-04  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/display/gimpdisplayshell-close.c
	(gimp_display_shell_close_dialog): don't set the default response
	to Save to reduce the risk of accidentally saving an image (#162872).

2005-01-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_name_canceled): removed debug output.
	(gimp_container_tree_view_remove_item)
	(gimp_container_tree_view_clear_items): removed compiler warnings.

2005-01-03  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.def: added missing symbols.

2005-01-03  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/ifscompose/ifscompose.c: use g_free() to release memory